src/tests/fixtures/typename/PropertyTypenameMustNeedToBeDeclaredAsConst.ts.expected
-----------------
INPUT
----------------- 
/** @gqlType */
export class User {
  __typename = "User";
  /** @gqlField */
  name: string = "Alice";
}

-----------------
OUTPUT
-----------------
-- Error Report --
src/tests/fixtures/typename/PropertyTypenameMustNeedToBeDeclaredAsConst.ts:3:16 - error: Expected `__typename` property initializer to be an expression with a const assertion. For example: `__typename = "User" as const` or `__typename: "User";`. This is needed to ensure Grats can determine the type of this object during GraphQL execution.

3   __typename = "User";
                 ~~~~~~


-- Code Action: "Create Grats-compatible `__typename` property" (fix-typename-property) --
- Original
+ Fixed

@@ -2,3 +2,3 @@
  export class User {
-   __typename = "User";
+   __typename = "User" as const;
    /** @gqlField */